--- a/code.ipynb
+++ b/code.ipynb
@@ -19,9 +19,9 @@
       "source": [
         "2540124633 - Lie Reubensto\n",
         "\n",
-        "Projek Akhir Applied Mathematics Modeling LA05\n",
+        "Applied Mathematics Modeling Project\n",
         "\n",
-        "Bagian Validasi Hasil dengan Bantuan Program"
+        "Validation with Program"
       ],
       "metadata": {
         "id": "bZrFyG_GsIfv"
